--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Manages a git repository of versioned JSONSchemas",
   "main": "generate-schema.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha"
   },
   "keywords": [
     "jsonschema",
@@ -17,14 +17,17 @@
   "license": "Apache-2.0",
   "dependencies": {
     "bunyan": "^1.8.12",
+    "fse": "^4.0.1",
     "glob": "^7.1.4",
     "js-yaml": "^3.13.1",
     "lodash": "^4.17.11",
     "nodegit": "^0.24.3",
+    "pino": "^5.12.6",
     "semver": "^6.1.1"
   },
   "devDependencies": {
     "mocha": "^6.1.4",
+    "pino-pretty": "^3.1.0",
     "test-fixture": "^2.4.0"
   }
 }
