--- a/package.json
+++ b/package.json
@@ -19,8 +19,8 @@
     "fse": "^4.0.1",
     "js-yaml": "^3.13.1",
     "lodash": "^4.17.11",
-    "nodegit": "^0.24.3",
-    "pino": "^5.12.6",
+    "neodoc": "^2.0.2",
+    "pino": "^5.12.6",s
     "semver": "^6.1.1"
   },
   "devDependencies": {
