Run git add command if files changed
This works better with a pre commit hook than a gitattributes filter

--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "test": "nyc mocha && npm run lint",
     "lint": "eslint --cache --max-warnings 0 index.js test/test.js"
   },
+  "bin": {
+    "manifest-jsonschema": "./index.js"
+  },
   "keywords": [
     "jsonschema",
     "schema",
