--- a/package.json
+++ b/package.json
@@ -1,14 +1,15 @@
 {
-  "name": "jsonschema-repository",
+  "name": "jsonschema-utilties",
   "version": "0.0.2",
-  "description": "Manages a repository of versioned JSONSchemas",
-  "main": "index.js",
+  "description": "Utilties to help manage a repository of versioned JSONSchemas.",
+  "main": "lib/jsonschema-utilities.js",
   "scripts": {
     "test": "nyc mocha && npm run lint",
     "lint": "eslint --cache --max-warnings 0 index.js test/test.js"
   },
   "bin": {
-    "manifest-jsonschema": "./index.js"
+    "jsonschema-materialize": "./scripts/jsonschema-materialize.js",
+    "jsonschema-materialize-git-hook": "./scripts/jsonschema-materialize-git-hook.js"
   },
   "keywords": [
     "jsonschema",
@@ -21,6 +22,7 @@
   "license": "Apache-2.0",
   "dependencies": {
     "fse": "^4.0.1",
+    "ini": "^1.3.5",
     "js-yaml": "^3.13.1",
     "lodash": "^4.17.11",
     "neodoc": "^2.0.2",
