--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "jsonschema-utilties",
+  "name": "jsonschema-tools",
   "version": "0.0.2",
   "description": "Utilties to help manage a repository of versioned JSONSchemas.",
-  "main": "lib/jsonschema-utilities.js",
+  "main": "lib/jsonschema-tools.js",
   "scripts": {
     "test": "nyc mocha && npm run lint",
     "lint": "eslint --cache --max-warnings 0 index.js test/test.js"
@@ -21,13 +21,15 @@
   "author": "Andrew Otto <otto@wikimedia.org>",
   "license": "Apache-2.0",
   "dependencies": {
+    "docopt": "^0.6.2",
     "fse": "^4.0.1",
     "ini": "^1.3.5",
     "js-yaml": "^3.13.1",
     "lodash": "^4.17.11",
     "neodoc": "^2.0.2",
     "pino": "^5.12.6",
-    "semver": "^6.1.1"
+    "semver": "^6.1.1",
+    "yargs": "^13.2.4"
   },
   "devDependencies": {
     "pino-pretty": "^3.1.0",
