--- a/package.json
+++ b/package.json
@@ -22,10 +22,9 @@
   "dependencies": {
     "docopt": "^0.6.2",
     "fse": "^4.0.1",
-    "ini": "^1.3.5",
     "js-yaml": "^3.13.1",
+    "json-schema-ref-parser": "^7.0.1",
     "lodash": "^4.17.11",
-    "neodoc": "^2.0.2",
     "pino": "^5.12.6",
     "semver": "^6.1.1",
     "yargs": "^13.2.4"
