--- a/test/fixtures/schemas/basic/current.yaml
+++ b/test/fixtures/schemas/basic/current.yaml
@@ -4,14 +4,9 @@ $id: /basic/1.2.0
 $schema: https://json-schema.org/draft-07/schema#
 type: object
 properties:
-  # global event fields sdfsf
-  $schema:
-    type: string
-    description: >
-      The URI identifying the jsonschema for this event. This may be just
-      a short uri containing only the name and revision at the end of the
-      URI path.  e.g. /schema_name/12345 is acceptable. This often will
-      (and should) match the schema's $id field.
+
+  # Include common properties we want in all schemas
+  $ref: /common/1.0.0#/properties
 
   test:
     type: string
