--- a/test/fixtures/schemas/common/current.yaml
+++ b/test/fixtures/schemas/common/current.yaml
@@ -1,6 +1,6 @@
-title: test/event
+title: common
 description: Schema used for simple tests
-$id: /basic/1.0.0
+$id: /common/1.0.0
 $schema: https://json-schema.org/draft-07/schema#
 type: object
 properties:
@@ -12,14 +12,6 @@ properties:
       URI path.  e.g. /schema_name/12345 is acceptable. This often will
       (and should) match the schema's $id field.
 
-  test:
+  dt:
     type: string
-    default: default test
-
-  test_map:
-    description: >
-      We want to support 'map' types using additionalProperties to specify
-      the value types.  (Keys are always strings.)
-    type: object
-    additionalProperties:
-      type: string
+    format: date-time
