Properly specify which files to publish in package.json

--- a/package.json
+++ b/package.json
@@ -18,6 +18,11 @@
     "json",
     "event"
   ],
+  "files": [
+    "index.js",
+    "scripts",
+    "test"
+  ]
   "author": "Andrew Otto <otto@wikimedia.org>",
   "license": "Apache-2.0",
   "dependencies": {
