--- a/test/fixtures/schemas/basic/current.yaml
+++ b/test/fixtures/schemas/basic/current.yaml
@@ -3,25 +3,27 @@ description: Schema used for simple tests
 $id: /basic/1.2.0
 $schema: https://json-schema.org/draft-07/schema#
 type: object
-properties:
+additionalProperties: false
+allOf:
+  - $ref: /common/1.0.0
+  - properties:
 
-  # Include common properties we want in all schemas
-  $ref: /common/1.0.0#/properties
+      test:
+        type: string
+        default: default test
 
-  test:
-    type: string
-    default: default test
+      test_number:
+        type: number
 
-  test_number:
-    type: number
+      test_integer:
+        type: integer
 
-  test_integer:
-    type: integer
-
-  test_map:
-    description: >
-      We want to support 'map' types using additionalProperties to specify
-      the value types.  (Keys are always strings.)
-    type: object
-    additionalProperties:
-      type: string
+      test_map:
+        description: >
+          We want to support 'map' types using additionalProperties to specify
+          the value types.  (Keys are always strings.)
+        type: object
+        additionalProperties:
+          type: string
+    required:
+      - test
