--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@wikimedia/jsonschema-tools",
-  "version": "0.2.0",
+  "version": "0.2.1",
   "description": "Utilties to help manage a repository of versioned JSONSchemas.",
   "homepage": "https://github.com/wikimedia/jsonschema-tools",
   "main": "index.js",
@@ -28,24 +28,24 @@
   "license": "Apache-2.0",
   "dependencies": {
     "bluebird": "^3.5.5",
-    "fs-extra": "^8.0.1",
+    "fs-extra": "^8.1.0",
     "js-yaml": "^3.13.1",
     "json-schema-merge-allof": "^0.6.0",
-    "json-schema-ref-parser": "^7.0.1",
-    "lodash": "^4.17.11",
-    "pino": "^5.12.6",
-    "pino-pretty": "^3.1.0",
-    "recursive-readdir": "^2.2.2",
-    "semver": "^6.1.1",
-    "yargs": "^13.2.4"
+    "json-schema-ref-parser": "^7.1.1",
+    "lodash": "^4.17.15",
+    "pino": "^5.13.2",
+    "pino-pretty": "^3.2.1",
+    "recursive-readdir-sync": "^1.0.6",
+    "semver": "^6.3.0",
+    "yargs": "^14.0.0"
   },
   "devDependencies": {
-    "test-fixture": "^2.4.0",
-    "mocha": "^6.1.4",
-    "nyc": "^13.3.0",
-    "eslint": "^5.9.0",
-    "eslint-config-wikimedia": "^0.10.1",
-    "eslint-plugin-jsdoc": "^4.1.0",
-    "eslint-plugin-json": "^1.2.0"
+    "test-fixture": "^2.4.1",
+    "mocha": "^6.2.0",
+    "nyc": "^14.1.1",
+    "eslint": "^6.3.0",
+    "eslint-config-wikimedia": "^0.14.1",
+    "eslint-plugin-jsdoc": "^15.9.1",
+    "eslint-plugin-json": "^1.4.0"
   }
 }
