--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@wikimedia/jsonschema-tools",
-  "version": "0.4.0",
+  "version": "0.4.1",
   "description": "Utilties to help manage a repository of versioned JSONSchemas.",
   "homepage": "https://github.com/wikimedia/jsonschema-tools",
   "main": "index.js",
@@ -20,9 +20,8 @@
   ],
   "files": [
     "index.js",
-    "scripts",
-    "test",
-    ".eslintrc.yml"
+    "lib",
+    "scripts"
   ],
   "author": "Andrew Otto <otto@wikimedia.org>",
   "license": "Apache-2.0",
