Add option to enforce bounds for number fields
This option configures a pair of numeric bounds that, at the
schema materialization level, will apply those bounds to number
fields (float, integer or number) by traversing the schema.

The change includes a small refactor that separates the logic that
modifies the materialized schema from the main function that
outputs the materialized schema to a path.

Bug: T258659

--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "js-yaml": "^3.13.1",
     "json-schema-merge-allof": "^0.6.0",
     "json-schema-ref-parser": "^7.1.1",
+    "json-schema-traverse": "^0.4.1",
     "lodash": "^4.17.15",
     "pino": "^5.13.2",
     "pino-pretty": "^3.2.1",
