Fix bug in enforced numeric bounds if max or min is 0
- Fix bug where a min or max of 0 was being interpreted as false and overwritten with bound
- Fix tests to handle this

Bug: T258659

--- a/test/fixtures/schemas/basic/1.1.0.yaml
+++ b/test/fixtures/schemas/basic/1.1.0.yaml
@@ -16,6 +16,9 @@ properties:
     default: default test
   test_number:
     type: number
+    maximum: 9007199254740991
+    minimum: -9007199254740991
+
   test_map:
     description: >
       We want to support 'map' types using additionalProperties to specify the
