--- a/package.json
+++ b/package.json
@@ -45,12 +45,12 @@
     "yargs": "^14.0.0"
   },
   "devDependencies": {
-    "test-fixture": "^2.4.1",
-    "mocha": "^6.2.0",
-    "nyc": "^14.1.1",
-    "eslint": "^6.3.0",
+    "eslint": "^6.8.0",
     "eslint-config-wikimedia": "^0.14.1",
     "eslint-plugin-jsdoc": "^15.9.1",
-    "eslint-plugin-json": "^1.4.0"
+    "eslint-plugin-json": "^1.4.0",
+    "mocha": "^6.2.0",
+    "nyc": "^14.1.1",
+    "test-fixture": "^2.4.1"
   }
 }
