When merging examples, use cartesian product
This handles the case where the number of examples in each schema to merge
is different.

--- a/test/fixtures/schemas/basic/current.yaml
+++ b/test/fixtures/schemas/basic/current.yaml
@@ -33,3 +33,5 @@ allOf:
         test_number: 1.0
         test_map:
           keyA: valueA
+      - $schema: { $ref: '#/$id' }
+        test: test_string_value_2
