Add option to generate schema example
If shouldGenerateExample is true, an example will be generated during
schema materialization.

Examples already present in the schema will be preserved. E.g. If the
schema already has examples, and shouldGenerateExample is true,
no new example will be generated.

Bug: T270134

--- a/test/fixtures/schemas/basic/current.yaml
+++ b/test/fixtures/schemas/basic/current.yaml
@@ -25,6 +25,12 @@ allOf:
         type: object
         additionalProperties:
           type: string
+      
+      test_uri:
+        type: string
+        format: uri-reference
+        maxLength: 1024
+
     required:
       - test
     examples:
