--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "bluebird": "^3.5.5",
     "fs-extra": "^8.1.0",
     "js-yaml": "^3.13.1",
+    "json-schema-faker": "^0.5.0-rcv.32",
     "json-schema-merge-allof": "^0.6.0",
     "json-schema-ref-parser": "^7.1.1",
     "json-schema-traverse": "^0.4.1",
