--- a/test/fixtures/schemas/basic/1.1.0.yaml
+++ b/test/fixtures/schemas/basic/1.1.0.yaml
@@ -26,6 +26,10 @@ properties:
     type: object
     additionalProperties:
       type: string
+required:
+  - $schema
+  - test
+
 examples:
   - $schema: /basic/1.1.0
     test: test_string_value
