Make compatibility test fail if enum is not a superset of old enum
Bug: T270470

--- a/test/fixtures/schemas/basic/current.yaml
+++ b/test/fixtures/schemas/basic/current.yaml
@@ -25,7 +25,16 @@ allOf:
         type: object
         additionalProperties:
           type: string
-      
+
+      test_enum:
+        description:
+          Only new entries to an enum should be allowed, and they can be provided in any order.
+        type: string
+        enum:
+          - val3
+          - val1
+          - val2
+
       test_uri:
         type: string
         format: uri-reference
