--- a/test/fixtures/schemas/basic/1.0.0.yaml
+++ b/test/fixtures/schemas/basic/1.0.0.yaml
@@ -23,6 +23,15 @@ properties:
     type: object
     additionalProperties:
       type: string
+
+  test_enum:
+    description:
+      Only new entries to an enum should be allowed, and they can be provided in any order.
+    type: string
+    enum:
+      - val1
+      - val2
+
 required:
   - $schema
   - test
