--- a/test/fixtures/schemas/legacy/1.1.0.yaml
+++ b/test/fixtures/schemas/legacy/1.1.0.yaml
@@ -1,6 +1,6 @@
 title: legacy
 description: Simple schema used to test skipping certain repository schema tests.
-$id: /legacy/1.0.0
+$id: /legacy/1.1.0
 $schema: https://json-schema.org/draft-07/schema#
 type: object
 properties:
@@ -18,8 +18,11 @@ properties:
 
 required:
   - $schema
+  # adding required fields is not allowed.  Usually this would fail, but
+  # skipSchemaTestCases is configured to skip compatibilitty test for this 1.1.0 schema.
+  - testNonSnakeCase
 
 examples:
-  - $schema: /legacy/1.0.0
+  - $schema: /legacy/1.1.0
     testNonSnakeCase: test_string_value
       
