--- a/test/fixtures/schemas/legacy/current.yaml
+++ b/test/fixtures/schemas/legacy/current.yaml
@@ -1,6 +1,6 @@
 title: legacy
-description: Simple schema used to test disabling of certain repository schema tests.
-$id: /legacy/1.0.0
+description: Simple schema used to test skipping certain repository schema tests.
+$id: /legacy/1.1.0
 $schema: https://json-schema.org/draft-07/schema#
 type: object
 properties:
@@ -18,8 +18,9 @@ properties:
 
 required:
   - $schema
+  - testNonSnakeCase
 
 examples:
-  - $schema: /legacy/1.0.0
+  - $schema: { $ref: '#/$id' }
     testNonSnakeCase: test_string_value
       
