--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "ajv": "^6.10.2",
     "bluebird": "^3.5.5",
     "fs-extra": "^8.1.0",
+    "hosted-git-info": "^4.0.2",
     "js-yaml": "^3.13.1",
     "json-schema-faker": "^0.5.0-rcv.32",
     "json-schema-merge-allof": "^0.6.0",
