--- a/test/fixtures/schemas/basic/current.yaml
+++ b/test/fixtures/schemas/basic/current.yaml
@@ -18,6 +18,11 @@ properties:
     type: integer
     minimum: 0
 
+  test_array:
+    type: array
+    items:
+      type: string
+
   test_map:
     description: >
       We want to support 'map' types using additionalProperties to specify
