Add object type edge cases
- Fail if a schema uses oneOf with different types
- Fail if a object field does not have schema

Bug: T337855
Bug: T338228

--- a/test/fixtures/schemas/basic/1.1.0.yaml
+++ b/test/fixtures/schemas/basic/1.1.0.yaml
@@ -41,6 +41,24 @@ properties:
       - val1
       - val2
 
+  test_oneof:
+    type: object
+    oneOf:
+      - type: object
+        required:
+          - test
+        properties:
+          test:
+            type: string
+      - type: object
+        required:
+          - test
+        properties:
+          test:
+            type: string
+          test2:
+            type: string
+
 required:
   - $schema
   - test
