--- a/test/fixtures/schemas/basic/current.yaml
+++ b/test/fixtures/schemas/basic/current.yaml
@@ -40,6 +40,24 @@ properties:
       - val1
       - val2
 
+  test_oneof:
+    type: object
+    oneOf:
+      - type: object
+        required:
+          - test
+        properties:
+          test:
+            type: string
+      - type: object
+        required:
+          - test
+        properties:
+          test:
+            type: string
+          test2:
+            type: string
+
   test_uri:
     type: string
     format: uri-reference
