Add jsonschema-tools diff subcommand
This finds materialized schema versions that have been modified since
the previous commit, and then prints a diff between them.

This will make reviewing schema changes easier.  We can schedule
jsonschema-tools diff to be run as a CI job, and reviewers can
look at the output to compare e.g. version 1.0.0 to version 1.1.0, and so on.

In WMF CI, we should use dyff as the --diff-command to show semantic yaml diffs,
instead of textual diffs.

Bug: T321850

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "main": "index.js",
   "scripts": {
-    "test": "nyc mocha && npm run lint",
+    "test": "nyc --reporter=lcov --reporter=text-summary --reporter=html mocha && npm run lint",
     "lint": "eslint --cache --max-warnings 0 index.js test/test.js"
   },
   "bin": {
